changed templating + favicon and atlanta panorama

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="assets/img/favicon.ico">
 
-    <title>BASIC - Blacktie.co Free Theme</title>
+    <title> - Avik Dureja</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -31,13 +31,12 @@
   <body>
 
     <div id="h">
-      <div class="logo">
-        <h2>BASIC</h2>
-      </div><!--/logo-->
+      <div class="logo"></div>
       <div class="container centered">
         <div class="row">
-          <div class="col-md-8 col-md-offset-2">
-            <h1>Hello, my name is <b>Daniel White</b>.<br/>I create for the web.</h1>
+          <div class="col-md-12">
+            <h1>Hey, I'm <b>Avik</b>.</h1>
+            <h1>I'm a 2nd year CS student @ Georgia Tech.</h1><h1>I love building apps, solving problems, and learning new things.</h1>
           </div>
         </div><!--/row-->
 
@@ -48,8 +47,8 @@
           </div><!--/col-md-4-->
 
           <div class="col-sm-4">
-            <i class="ion-ios7-browsers-outline"></i>
-            <h3>UI Development</h3>
+            <i class="ion-code-working"></i>
+            <h3>Backend Development</h3>
           </div><!--/col-md-4-->
 
           <div class="col-sm-4">
@@ -63,33 +62,25 @@
 
     <div class="container ptb">
       <div class="row">
-        <h2 class="centered mb">I craft handsome sites & stunning apps<br/>that empower your startup.</h2>
-        <div class="col-md-6">
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-        </div><!--/col-md-6-->
-        <div class="col-md-6">
-          <p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software.</p>
+        <h2 class="centered mb">About Me</h2>
+        <div class="col-md-8 col-md-offset-2">
+          <p>I'm a rising sophomore <b>Computer Science</b> major at Georgia Tech. I've been coding and creating for <b>5 years</b>, and I'm ecstatic to start learning how code bases work at the industry level.</p>
+          <br />
+          <p>My goal is to obtain a <b>software engineering internship</b> for the Summer of 2017 at a <b>medium-sized startup</b> to further grow as a developer, employee, and person.</p>
         </div><!--/col-md-6-->
       </div><!--/row-->
     </div><!-- /.container -->
-    <div class="container">
-      <div class="row">
-        <div class="col-md-10 col-md-offset-1">
-          <img src="assets/img/items.png" class="img-responsive" alt="">
-        </div>
-      </div><!--/row-->
-    </div><!--/.container-->
 
     <div id="g">
       <div class="container">
         <div class="row centered">
-          <h2>Check some of my latest works.</h2>
+          <h2>Experience</h2>
           <div class="col-md-8 col-md-offset-2">
-            <p>Contrary to popular belief, Lorem Ipsum is not simply random text.<br/>It has roots in a piece of classical Latin literature<br/>from 45 BC, making it over 2000 years old.</p>
-
+            <p style="color:white">This is a collection of applications, classes, and programs I have completed that have helped me grown as a coder.</p>
           </div><!--/col-md-8-->
         </div><!--/row-->
       </div><!--/.container-->
+    </div>  
     <div class="portfolio-centered mt">
       <div class="recentitems portfolio">
 
@@ -245,13 +236,12 @@
           </div>
         </div><!--/row-->
       </div><!--/container-->
-    </div><!--/.G-->
 
     <div id="sep">
       <div class="container">
         <div class="row centered">
           <div class="col-md-8 col-md-offset-2">
-            <h1>I live in the amazing San Francisco</h1>
+            <h1>I live in the <b>greater NYC area</b> and study in the heart of <b>Atlanta</b>.</h1>
             <h3 class="mb">Lorem Ipsum is simply dummy text<br/>of the printing and typesetting industry.</h3>
             <button class="btn btn-conf btn-clear">Request for Information</button>
           </div>
@@ -262,12 +252,9 @@
     <div id="f">
       <div class="container">
         <div class="row centered">
-          <div class="col-md-8 col-md-offset-2">
-            <a href="#"><i class="ion-social-twitter"></i></a>
-            <a href="#"><i class="ion-social-dribbble"></i></a>
-            <a href="#"><i class="ion-social-instagram"></i></a>
-            <a href="#"><i class="ion-social-facebook"></i></a>
-          </div><!--/col-md-8-->
+            <a href="#"><i class="ion-social-linkedin"></i></a>
+            <a href="#"><i class="ion-social-github"></i></a>
+            <a href="#"><i class="ion-document-text"></i></a>
         </div>
       </div><!--/container-->
     </div><!--/.F-->
