added last name to header

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="container centered">
             <div class="row">
                 <div class="col-md-12">
-                    <h1>Hey, I'm <b>Avik</b>.</h1>
+                    <h1>Hey, I'm <b>Avik Dureja</b>.</h1>
                     <h1>I'm a 2nd year CS student @ <b><a href="http://www.cc.gatech.edu/">Georgia Tech</a></b>.</h1>
                     <h1>I love building apps, solving problems, and learning
                     new things.</h1>
