--- a/index.html
+++ b/index.html
@@ -28,24 +28,20 @@
         <div class="container centered">
             <div class="row">
                 <div class="col-md-12">
-                    <h1>Hey, I'm <b>Avik</b>.</h1>
+                    <h1>Hey, my name's <b>Avik Dureja</b>.</h1>
                     <h1>I'm a 2nd year CS student @ <b><a href="http://www.cc.gatech.edu/">Georgia Tech</a></b>.</h1>
                     <h1>I love building apps, solving problems, and learning
                     new things.</h1>
                 </div>
             </div><!--/row-->
             <div class="row mt">
-                <div class="col-sm-4">
+                <div class="col-sm-4 col-sm-offset-2">
                     <i class="ion-ios7-monitor-outline"></i>
                     <h3>Web Design</h3>
                 </div><!--/col-md-4-->
                 <div class="col-sm-4">
                     <i class="ion-code-working"></i>
                     <h3>Backend Development</h3>
-                </div><!--/col-md-4-->
-                <div class="col-sm-4">
-                    <i class="ion-settings"></i>
-                    <h3>Generating Creative Solutions</h3>
                 </div><!--/col-md-4-->
             </div><!--/row-->
         </div><!--/container-->
@@ -55,13 +51,12 @@
             <h2 class="centered mb">About Me</h2>
             <div class="col-md-8 col-md-offset-2">
                 <p>I'm a rising <b>sophomore</b> studying <b>Computer Science</b> at
-                Georgia Tech. I've been coding and creating for <b>5 years</b>,
-                and I'm ecstatic to start learning how code bases work at the
-                industry level.</p><br>
+                Georgia Tech.<br>
+                I've been coding and creating for <b>5 years</b>,
+                and I'm ecstatic to start learning how code bases work at the industry level.</p><br>
                 <p>My goal is to obtain a <b>software engineering
                 internship</b> for the Summer of 2017 at a <b>medium-sized
-                startup</b> to further grow as a developer, employee, and
-                person.</p>
+                startup</b> that fosters intellectual growth, both as a person and a developer.</p>
             </div><!--/col-md-6-->
         </div><!--/row-->
     </div><!-- /.container -->
