--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div><!--H-->
     <div class="container ptb">
         <div class="row">
-            <h2 class="centered mb">About Me</h2>
+            <h2 class="centered">About Me</h2>
             <div class="col-md-8 col-md-offset-2">
                 <p>I'm a rising <b>sophomore</b> studying <b>Computer Science</b> at
                 Georgia Tech.<br>
