--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="row">
             <h2 class="centered">About Me</h2>
             <div class="col-md-8 col-md-offset-2">
-                <p>I'm a rising <b>sophomore</b> studying <b>Computer Science</b> at
+                <p>I'm a <b>sophomore</b> studying <b>Computer Science</b> at
                 Georgia Tech.<br>
                 I've been coding and creating for <b>5 years</b>,
                 and I'm ecstatic to start learning how code bases work at the industry level.</p><br>
