locations itnerested in workign at

--- a/index.html
+++ b/index.html
@@ -230,11 +230,8 @@
         <div class="container">
             <div class="row centered">
                 <div class="col-md-8 col-md-offset-2">
-                    <h1>I'm interested in working in <b>New York City</b>, <b>Atlanta</b>, or <b>San Francisco</b>.</h1>
-                    <h3 class="mb">Lorem Ipsum is simply dummy text<br>
-                    of the printing and typesetting
-                    industry.</h3><button class="btn btn-conf btn-clear">Request
-                    for Information</button>
+                    <h1>I'm interested in working in the <b>New York City</b>, <b>Atlanta</b>, or <b>San Francisco</b> areas.</h1>
+                    <h3 class="mb">Check out my LinkedIn, Github, and résumé!</h3>
                 </div>
             </div><!--/row-->
         </div><!--/container-->
