--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             <div class="row centered">
                 <div class="col-md-8 col-md-offset-2">
                     <h1>I'm interested in working in the <b>New York City</b>, <b>Atlanta</b>, or <b>San Francisco</b> areas.</h1>
-                    <h3 class="mb">Check out my LinkedIn, Github, and résumé!</h3>
+                    <h3 class="mt">Check out my LinkedIn, Github, and résumé below!</h3>
                 </div>
             </div><!--/row-->
         </div><!--/container-->
