--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
         <div class="container">
             <div class="row centered">
                 <div class="col-md-8 col-md-offset-2">
-                    <h1>I'm interested in working in the <b>New York City</b>, <b>Atlanta</b>, or <b>San Francisco</b> areas.</h1>
-                    <h3 class="mt">Check out my LinkedIn, Github, and résumé below!</h3>
+                    <h1 class="ptb">I'm interested in working in the <b>New York City</b>, <b>Atlanta</b>, or <b>San Francisco</b> areas.</h1>
+                    <h3 class="ptb">Check out my LinkedIn, Github, and résumé below!</h3>
                 </div>
             </div><!--/row-->
         </div><!--/container-->
