--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
             <div class="row mt">
                 <div class="col-sm-4 col-sm-offset-2">
                     <i class="ion-ios7-monitor-outline"></i>
-                    <h3>Web Design</h3>
+                    <h3>Web Developer</h3>
                 </div><!--/col-md-4-->
                 <div class="col-sm-4">
                     <i class="ion-code-working"></i>
-                    <h3>Backend Development</h3>
+                    <h3>Backend Nerd</h3>
                 </div><!--/col-md-4-->
             </div><!--/row-->
         </div><!--/container-->
@@ -53,7 +53,7 @@
                 <p class="about">I'm a <b>sophomore</b> studying <b>Computer Science</b> at
                 Georgia Tech.</p>
                 <br>
-                <p class="about">I've been coding and creating for <b>5 years</b>, and I'm ecstatic to start learning how code bases work at the industry level.</p>
+                <p class="about">I've been coding and creating for <b>5 years</b>, and I'm ecstatic to expose myself to industry-grade codebases.</p>
                 <br>
                 <p class="about">My goal is to obtain a <b>software engineering
                 internship</b> for the Summer of 2017 at a <b>medium-sized
@@ -123,7 +123,7 @@
                 <div class="media">
                     <h3><a href="https://home.cc.gatech.edu/ccl/15"><b>CS 1332: Data Structures and Algorithms</b></a></h3>
                     <h4>Spring '16</h4>
-                    <p class="project">Learned, understood, and coded a variety of common algorithms data structures, including sorting algorithms, search trees, text processing, and graph algorithms.</p>
+                    <p class="project">Learned, dissected, and coded implementations of a variety of common algorithms &amp; data structures, including sorting algorithms, search trees, text processing, and graph algorithms.</p>
                 </div>                 
                 <div class="media">
                     <h3><a href="http://cs1331.gatech.edu/syllabus.html"><b>CS 1331: Object-Oriented Programming</b></a></h3>
@@ -135,23 +135,55 @@
     </div>
 
 
-    <div class="container">
-        <div class="row clients centered">
-            <h2>Repertoire</h2>
-            <div class="col-sm-2 col-sm-offset-1">
-                <img src="assets/img/client1.png" alt="">
+    <div class="container ptb">
+        <div class="row centered">
+            <h1>Skillset</h1>
+            <br><br>
+            <div class="col-sm-4">
+                <h3>Frontend</h3>
+                <div id="header">
+                    <hr class="skillDivide"></hr>
+                </div>
+
+                <h4><b>Proficient:</b></h4>  
+                <p class="skill">
+                    HTML5<br>CSS<br>jQuery<br> 
+                </p>
+
+                <h4><b>Familiar:</b></h4>  
+                <p class="skill">
+                    PHP
+                </p>
+
             </div>
-            <div class="col-sm-2">
-                <img src="assets/img/client3.png" alt="">
+            <div class="col-sm-4">
+                <h3>Programming</h3>
+                <div id="header">
+                    <hr class="skillDivide"></hr>
+                </div>
+
+                <h4><b>Proficient:</b></h4>  
+                <p class="skill">
+                    Java<br>Python<br>SQL<br>JavaScript<br>
+                </p> 
             </div>
-            <div class="col-sm-2">
-                <img src="assets/img/client2.png" alt="">
-            </div>
-            <div class="col-sm-2">
-                <img src="assets/img/client4.png" alt="">
-            </div>
-            <div class="col-sm-2">
-                <img src="assets/img/client5.png" alt="">
+
+            <div class="col-sm-4">
+                <h3>Technologies</h3>
+                <div id="header">
+                    <hr class="skillDivide"></hr>
+                </div>
+
+                <h4><b>Proficient:</b></h4>  
+                <p class="skill">
+                    Git<br>Bootstrap<br>Jinja2<br>Flask<br>Bash<br> 
+                </p>
+
+                <h4><b>Familiar:</b></h4>  
+                <p class="skill">
+                    Google App Engine
+                </p>
+
             </div>
         </div><!--/row-->
     </div><!--/container-->
@@ -177,7 +209,7 @@
                 </div>    
             </div>
             <div class="row centered">
-                <p> - Avik Dureja - 2016 - </p>
+                <p class="skill"> <b>&copy; Avik Dureja 2016</b></p>
             </div>
         </div><!--/container-->
     </div><!--/.F-->
