--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
                 <h4><b>Proficient:</b></h4>  
                 <p class="skill">
-                    HTML5<br>CSS<br>jQuery<br> 
+                    HTML5<br>CSS<br>JavaScript<br>jQuery<br> 
                 </p>
 
                 <h4><b>Familiar:</b></h4>  
@@ -164,7 +164,7 @@
 
                 <h4><b>Proficient:</b></h4>  
                 <p class="skill">
-                    Java<br>Python<br>SQL<br>JavaScript<br>
+                    Java<br>Python<br>SQL<br>
                 </p> 
             </div>
 
