--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <div class="row centered">
                 <div class="col-md-8 col-md-offset-2">
                     <h1 class="ptb">I'm interested in working in the <b>New York City</b>, <b>Atlanta</b>, or <b>San Francisco</b> areas.</h1>
-                    <h3 class="ptb">Check out my LinkedIn, Github, and résumé below!</h3>
+                    <h3 class="ptb">Check out my LinkedIn, Github, and résumé below and contact me!</h3>
                 </div>
             </div><!--/row-->
         </div><!--/container-->
@@ -209,7 +209,7 @@
                 </div>    
             </div>
             <div class="row centered">
-                <p class="skill"> <b>&copy; Avik Dureja 2016</b></p>
+                <p class="skill" style="color:white">&copy; Avik Dureja 2016</p>
             </div>
         </div><!--/container-->
     </div><!--/.F-->
