changed contact prompt + responsiveness for landing

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <p class="about">I'm a <b>sophomore</b> studying <b>Computer Science</b> at
                 Georgia Tech.</p>
                 <br>
-                <p class="about">I've been coding and creating for <b>5 years</b>, and I'm ecstatic to expose myself to industry-grade codebases.</p>
+                <p class="about">I've been coding and creating for <b>5 years</b>, and I'm more than ready and ecstatic to expose myself to industry-grade codebases.</p>
                 <br>
                 <p class="about">My goal is to obtain a <b>software engineering
                 internship</b> for the Summer of 2017 at a <b>medium-sized
