changed github username

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 <div class="col-sm-8 col-sm-offset-2">
                     <a target="_tab" href="https://www.linkedin.com/in/avik-dureja-5b7b5aa0
     "><i class="ion-social-linkedin"></i></a>
-                    <a target="_tab" href="https://github.com/imthehinduhavoc"><i class="ion-social-github"></i></a>
+                    <a target="_tab" href="https://github.com/avikdureja"><i class="ion-social-github"></i></a>
                     <a href="#"><i class="ion-document-text"></i></a>
                 </div>    
             </div>
