--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                     <a target="_tab" href="https://www.linkedin.com/in/avik-dureja-5b7b5aa0
     "><i class="ion-social-linkedin"></i></a>
                     <a target="_tab" href="https://github.com/adureja"><i class="ion-social-github"></i></a>
-                    <a href="#"><i class="ion-document-text"></i></a>
+                    <a target="_tab" href="assets/AvikDureja-Resume.pdf"><i class="ion-document-text"></i></a>
                 </div>    
             </div>
             <div class="row centered">
