changed about pane

--- a/index.html
+++ b/index.html
@@ -55,9 +55,8 @@
                 <br>
                 <p class="about">I've been coding and creating for <b>5 years</b>, and I'm more than ready and ecstatic to expose myself to industry-grade codebases.</p>
                 <br>
-                <p class="about">My goal is to obtain a <b>software engineering
-                internship</b> for the Summer of 2017 at a <b>medium-sized
-                startup</b> that fosters intellectual growth, both as a person and a developer.</p>
+                <p class="about">I am interested in obtaining a <b>software engineering
+                internship</b> for the Summer of 2017 at a company that fosters <b>intellectual growth</b>, both as a person and a developer.</p>
             </div><!--/col-md-6-->
         </div><!--/row-->
     </div><!-- /.container -->
